# speechd-wip

./: Makefile.am  README.md  TODO  configure.ac
config/: Makefile.am  speechd.conf
config/modules/: Makefile.am  baratinoo.conf  kali.conf
data/: Makefile.am  org.freebsoft.speechd.modules.cicero.gschema.xml  org.freebsoft.speechd.modules.cicero.gschema.xml.in  org.freebsoft.speechd.modules.espeak-ng.gschema.xml  org.freebsoft.speechd.modules.espeak-ng.gschema.xml.in  org.freebsoft.speechd.modules.espeak.gschema.xml  org.freebsoft.speechd.modules.espeak.gschema.xml.in  org.freebsoft.speechd.modules.espeak.gschema.xml.in.in  org.freebsoft.speechd.modules.festival.gschema.xml  org.freebsoft.speechd.modules.festival.gschema.xml.in  org.freebsoft.speechd.modules.flite.gschema.xml  org.freebsoft.speechd.modules.flite.gschema.xml.in  org.freebsoft.speechd.modules.generic.gschema.xml  org.freebsoft.speechd.modules.generic.gschema.xml.in  org.freebsoft.speechd.modules.generic.gschema.xml.in.in  org.freebsoft.speechd.modules.ibmtts.gschema.xml  org.freebsoft.speechd.modules.ibmtts.gschema.xml.in  org.freebsoft.speechd.modules.ivona.gschema.xml  org.freebsoft.speechd.modules.ivona.gschema.xml.in  org.freebsoft.speechd.modules.pico.gschema.xml  org.freebsoft.speechd.modules.pico.gschema.xml.in  org.freebsoft.speechd.server.gschema.xml  org.freebsoft.speechd.server.gschema.xml.in  org.freebsoft.speechd.server.gschema.xml.in.in  org.speech-dispatcher.gschema.xml  org.speech-dispatcher.modules.cicero.gschema.xml  org.speech-dispatcher.modules.espeak-ng.gschema.xml  org.speech-dispatcher.modules.espeak.gschema.xml  org.speech-dispatcher.modules.festival.gschema.xml  org.speech-dispatcher.modules.flite.gschema.xml  org.speech-dispatcher.modules.generic.gschema.xml  org.speech-dispatcher.modules.ibmtts.gschema.xml  org.speech-dispatcher.modules.ivona.gschema.xml  org.speech-dispatcher.modules.pico.gschema.xml
doc/: speech-dispatcher.texi
include/: speechd_defines.h  speechd_types.h
locale/: Makefile.am
po/: POTFILES.in  POTFILES.skip
src/: Makefile.am
src/api/c/: libspeechd.h
src/api/python/speechd_config/: config.py.in
src/audio/: pulse.c
src/modules/: Makefile.am  baratinoo.c  espeak.c  festival.c  flite.c  generic.c  kali.cpp  module_main.c  module_utils.c  module_utils.h  pico.c
src/server/: Makefile.am  audio.c  audio.h  configuration.c  configuration.h  module.c  msg.h  options.c  output.c  output.h  server.c  set.c  set.h  speechd.c  speechd.h  symbols.c
